# template_cpp

./: .gitmodules  CMakeLists.txt  README.md  compile.sh  include_notes.md  readme.md
.github/workflows/: arch.yml  compilation.yml  ubuntu.yml  windows.yml
cmake/: PVS-Studio-conf.cmake
cmake/defaults/: CompilerWarnings.cmake  Sanitizers.cmake
cmake/extra/: PVS-Studio.cmake
data/: data.md
